优化架构 新增表结构
